<resources>
    <!-- Name for the application -->
    <string name="app_name">BookStoreApp</string>
    <string name="book">book</string>
    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">There are no books in the list yet…</string>
    <!-- Subtitle text for the empty view that prompts the user to add a book -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <!-- Content Description strings -->
    <string name="empty_shelf_image">Image of an empty shelf</string>
    <string name="decrement_button_image">Decrement quantity</string>
    <string name="increment_button_image">Increment quantity</string>
    <!-- Sale button -->
    <string name="sale_button">Sale button</string>
    <!-- In stock TextView -->
    <string name="in_stock_tv">In stock:</string>
    <!-- Book info -->
    <string name="book_info">Book info:</string>
    <string name="book_title">Book title</string>
    <string name="book_author">Author</string>
    <string name="book_price">Price:</string>
    <string name="book_price_hint">Book\'s price</string>
    <string name="currency_sign">$</string>
    <string name="book_quantity">Quantity:</string>
    <string name="default_quantity">0</string>
    <string name="supplier_info">Supplier\'s info:</string>
    <string name="supplier_name">Supplier\'s name</string>
    <string name="supplier_phone">Supplier\'s phone</string>
    <string name="save_btn">Save item</string>
    <string name="edit_item">Edit item</string>
    <string name="delete_all_items">Delete all items</string>
    <!-- Title for the activity to add a new book -->
    <string name="add_edit_activity_title_new_book">Add a Book</string>
    <!-- Title for the activity to edit an existing book -->
    <string name="add_edit_activity_title_edit_book">Edit a Book</string>
    <!-- Toast message in editor when new pet has been successfully inserted -->
    <string name="add_edit_activity_insert_book_successful">Book saved</string>
    <!-- Toast message in editor when new book has failed to be inserted -->
    <string name="add_edit_activity_insert_book_failed">Error with saving book</string>
    <!-- Toast message in editor when current book was successfully updated -->
    <string name="add_edit_activity_update_book_successful">Book updated</string>
    <!-- Toast message in editor when current book has failed to be updated -->
    <string name="add_edit_activity_update_book_failed">Error with updating a book</string>
    <!-- Toast message in editor when current pet was successfully deleted -->
    <string name="add_edit_activity_delete_book_successful">Book deleted</string>
    <!-- Toast message in editor when current pet has failed to be deleted -->
    <string name="add_edit_activity_delete_book_failed">Error with deleting book</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current book -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current book -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Dialog button text for the option to confirm deleting the current book -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book -->
    <string name="cancel">Cancel</string>
    <!-- Validation messages -->
    <string name="title_not_null">Enter the book\'s title</string>
    <string name="author_not_null">Enter the book\'s author</string>
    <string name="price_not_null">Enter the book\'s price</string>
    <string name="suppliers_name_not_null">Enter supplier\'s name</string>
    <string name="suppliers_phone_not_null">Enter supplier\'s phone</string>
    <!-- Title for the book details activity -->
    <string name="book_details_activity_title">Book Details</string>
    <!-- LOG messages -->
    <string name="rows_deleted"> rows deleted from books database</string>
    <!-- BookDetailsActivity buttons -->
    <string name="delete_record">Delete record</string>
    <string name="contact_supplier">Contact supplier</string>
    <!-- Preview (tools) string -->
    <string name="preview_book_title">Atlas Shrugged</string>
    <string name="preview_book_author">Ayn Rand</string>
    <string name="preview_in_stock">5</string>
    <string name="preview_price">25$</string>
</resources>
