<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/parameter_8_dp"
        tools:context=".BookDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderStyle"
                android:text="@string/book_info" />

            <LinearLayout
                style="@style/EditTextLinesStyle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_book_title"
                    style="@style/EditTextStyle"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_book_author"
                    style="@style/EditTextStyle"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderStyle"
                android:text="@string/book_price" />

            <RelativeLayout style="@style/EditTextLinesStyle">

                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditTextStyle"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/parameter_16_dp"
                    android:text="@string/currency_sign"
                    android:textSize="@dimen/text_size_14_sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderStyle"
                android:text="@string/book_quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/decrement_img_btn"
                    style="@style/QuantityBtnStyle"
                    android:background="@drawable/ic_remove_circle_outline_black_36dp"
                    android:contentDescription="@string/decrement_button_image" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/QuantityTVStyle"
                    android:text="@string/default_quantity" />

                <ImageButton
                    android:id="@+id/increment_img_btn"
                    style="@style/QuantityBtnStyle"
                    android:background="@drawable/ic_add_circle_outline_black_36dp"
                    android:contentDescription="@string/increment_button_image" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderStyle"
                android:text="@string/supplier_info" />

            <LinearLayout
                style="@style/EditTextLinesStyle"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/supplier_name"
                    style="@style/EditTextStyle"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/supplier_phone"
                    style="@style/EditTextStyle"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/parameter_36_dp"
            android:orientation="horizontal">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/delete_record_btn"
                style="@style/ButtonStyle"
                android:text="@string/delete_record"
                fancy:fb_borderColor="@color/deleteBtnBorderColor"
                fancy:fb_borderWidth="@dimen/parameter_4_dp"
                fancy:fb_defaultColor="@color/deleteBtnColor"
                fancy:fb_focusColor="@color/onClickColor"
                fancy:fb_iconPaddingTop="@dimen/parameter_8_dp"
                fancy:fb_iconPosition="left"
                fancy:fb_iconResource="@drawable/ic_delete_forever_blue_grey_800_24dp"
                fancy:fb_radius="@dimen/parameter_8_dp"
                fancy:fb_textColor="@color/btnTextColor" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/contact_supplier_btn"
                style="@style/ButtonStyle"
                android:text="@string/contact_supplier"
                fancy:fb_borderColor="@color/contactBtnBorderColor"
                fancy:fb_borderWidth="@dimen/parameter_4_dp"
                fancy:fb_defaultColor="@color/contactBtnColor"
                fancy:fb_focusColor="@color/onClickColor"
                fancy:fb_iconPaddingTop="@dimen/parameter_8_dp"
                fancy:fb_iconPosition="left"
                fancy:fb_iconResource="@drawable/ic_phone_blue_grey_800_24dp"
                fancy:fb_radius="@dimen/parameter_8_dp"
                fancy:fb_textColor="@color/btnTextColor" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>