<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/dummy2"
    android:descendantFocusability="blocksDescendants"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vintage_books">

        <TextView
            android:id="@+id/book_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#DE000000"
            android:textSize="@dimen/dummy4"
            android:textStyle="bold"
            android:clickable="false"
            android:focusable="false"
            tools:text="Big Nerd Ranch" />

        <TextView
            android:id="@+id/book_author_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="#8A000000"
            android:textSize="@dimen/dummy2"
            android:textStyle="bold"
            android:layout_below="@id/book_title_tv"
            android:clickable="false"
            android:focusable="false"
            tools:text="@string/book_author" />

        <TextView
            android:id="@+id/book_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFD50000"
            android:textSize="@dimen/dummy3"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/book_author_tv"
            android:clickable="false"
            android:focusable="false"
            tools:text="25$" />

        <TextView
            android:id="@+id/in_stock_tv"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:minWidth="0dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="#DE000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/book_price_tv"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/in_stock_tv" />

        <TextView
            android:id="@+id/in_stock_quantity_tv"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_below="@id/book_price_tv"
            android:textStyle="bold"
            android:layout_toEndOf="@id/in_stock_tv"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="5" />

        <Button
            android:id="@+id/sale_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minWidth="0dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dummy2"
            android:textStyle="bold"
            android:text="@string/sale_button"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/book_price_tv" />
    </RelativeLayout>
</android.support.v7.widget.CardView>